# paperconan

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
docs/: README.md  batch-workflow.md  cli.md  detectors.md  faq.md  reports.md
docs/superpowers/plans/: 2026-05-28-paperconan-data-fetch.md  2026-06-03-grim-grimmer-detector.md  2026-06-24-cross-sheet-prefilter-context.md  2026-07-08-report-fidelity-and-dispersed-repeat-detector.md  2026-07-10-adaptive-image-diagnostics-product.md  2026-07-10-image-diagnostics-benchmark.md  2026-07-11-download-and-evidence-binding.md  2026-07-11-numeric-correctness.md  2026-07-11-release-governance.md  2026-07-11-resource-and-input-fidelity.md  (+3 more)
examples/: README.md  make_demo_data.py
examples/demo_paper/: ED_Fig2_tumor_volume.xlsx  ED_Fig4_qPCR.xlsx
skill/references/: detectors.md  interpretation.md
skills/paperconan/: SKILL.md
src/paperconan/: __init__.py  __main__.py  _adjudicated_html.py  _audit.py  _coverage.py  _extract.py  _formula_cache.py  _html.py  _neutral_language.py  _prefilter.py  _profiles.py  detectors.py  packet.py  schema.py
tests/: build_fixture.py  build_nbs1_regression.py  build_pdf_fixture.py  test_adjudicated_report.py  test_adjudicated_report_unified.py  test_block_value_duplication.py  test_collisions.py  test_decimal_tail_clustering.py  test_decimal_tail_gate.py  test_detection_recall_e2e.py  test_dispersed_repeats.py  test_extract.py  test_fetch_download.py  test_fetch_nature.py  test_findings_cap.py  test_formula_cache.py  test_fp_complement_and_tweak.py  test_fraction_reuse.py  test_grim.py  test_http_get_text.py  test_image_assets.py  test_image_dependencies.py  test_image_diagnostics.py  test_image_report.py  test_image_workflow.py  test_module_boundaries.py  test_offset_row_reuse.py  test_packaging.py  test_packet.py  test_profiles.py  test_progression_reuse.py  test_recurring_row_vector.py  test_relations_flood.py  test_relations_tolerance.py  test_round_shift_shared_fraction.py  test_row_pair_digit_coupling.py  test_row_pair_shared_fraction.py  test_row_relations.py  test_runtime_metadata.py  test_scaled_row_reuse.py  (+8 more)
tests/fetch/: conftest.py  test_cli.py  test_download.py  test_files.py  test_http.py  test_resolve.py  test_search_all.py  test_sources_dryad.py  test_sources_europepmc.py  test_sources_figshare.py  test_sources_zenodo.py
tests/golden/: tiny_paper.json
(+36 files in other folders)
