[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperconan"
version = "0.8.2"
description = "Numeric forensics for paper supplementary source-data: surfaces fabrication-style patterns (signal, not verdict)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Xiaotong" },
]
keywords = ["research-integrity", "data-forensics", "pubpeer", "scientific-fraud", "xlsx", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "openpyxl>=3.1",
    "numpy>=1.24",
    "scipy>=1.10",
    # Rust spreadsheet reader. Base dependency because it is the ONLY reader for
    # legacy .xls / .xlsm / .xlsb (openpyxl cannot read them); it is also the fast
    # path for .xlsx (byte-identical Sheet). Without it, .xls Source Data would be
    # silently unreadable — the exact coverage hole this closes.
    "python-calamine>=0.2",
]

[project.optional-dependencies]
# Extract tables out of supplementary PDF / Word files. Optional so the base
# install (xlsx/csv/tsv) stays dependency-light; the parsers are imported lazily.
pdf = ["pdfplumber>=0.11"]
docx = ["python-docx>=1.1"]
# Deprecated alias: calamine is now a base dependency (see [project].dependencies).
# Kept so `pip install paperconan[fast]` keeps working.
fast = ["python-calamine>=0.2"]
all = ["pdfplumber>=0.11", "python-docx>=1.1"]
test = ["pytest>=8", "pdfplumber>=0.11", "python-docx>=1.1", "xlwt>=1.3", "tomli>=2; python_version < '3.11'"]
dev = ["pytest>=8", "pdfplumber>=0.11", "python-docx>=1.1", "xlwt>=1.3", "tomli>=2; python_version < '3.11'"]

[project.urls]
Homepage = "https://github.com/zixixr/paperconan"
Issues = "https://github.com/zixixr/paperconan/issues"

[project.scripts]
paperconan = "paperconan._audit:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = ["network: live network test, skipped unless PAPERCONAN_LIVE=1"]
